--- a/index.html
+++ b/index.html
@@ -1,11 +1,15 @@
+
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <meta charset="utf-8" />
     <title>DOGGO</title>
     <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="index.css" />
     <script type="text/javascript" src="src/index.js"></script>
     <link rel="shortcut icon" href="doge.jpeg">
+    <link rel="shortcut icon" href="doge.jpeg" />
   </head>
   <body>
     <div id="filter-div">
@@ -14,11 +18,13 @@
     <div id="dog-bar">
 
     </div>
+    <div id="dog-bar"></div>
     <div id="dog-summary-container">
       <h1>DOGGO:</h1>
       <div id="dog-info">
-        
+
       </div>
+      <div id="dog-info"></div>
     </div>
   </body>
 </html>
